buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE")
    }
}
apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'spring-boot'

sourceSets {
    main {
        java { srcDirs = [] }
        groovy {
            srcDirs = ['src/main/java','src/main/groovy']
        }
        resources {
            srcDir 'src/main/resources'
        }

    }
    test {
        java { srcDirs = [] }
        groovy {
            srcDirs = ["src/test/java"]
        }
        resources {
            srcDirs = ['src/test/resources']
        }

    }
    integTest {
        java { srcDirs = [] }
        groovy {
            srcDirs = ["src/integration-test/java"]
        }
        resources {
            srcDirs = ['src/integration-test/resources']
        }
        compileClasspath += sourceSets.main.output + sourceSets.test.output + configurations.testRuntime
        runtimeClasspath += sourceSets.main.output + sourceSets.test.output + configurations.testRuntime
    }
}



test {
    // enable TestNG support (default is JUnit)
    //useTestNG()

    // set a system property for the test JVM(s)
    //systemProperty 'some.prop', 'value'

    // explicitly include or exclude tests
    //include 'org/foo/**'
    //exclude 'org/boo/**'

    // show standard out and standard error of the test JVM(s) on the console
    //testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "1G"
    maxHeapSize = "1G"

    // set JVM arguments for the test JVM(s)
    //jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }

    // listen to standard out and standard error of the test JVM(s)
//  onOutput { descriptor, event ->
//     logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
//  }
}

task integTest(type: Test) {
    testClassesDir = sourceSets.integTest.output.classesDir
    classpath = sourceSets.integTest.runtimeClasspath
}



jar {
    baseName = 'turbo-laser'
    version =  '1.0.0'
}

if (!hasProperty('mainClass')) {
    //ext.mainClass = 'org.springframework.batch.core.launch.support.CommandLineJobRunner'
    ext.mainClass = 'uk.ac.kcl.Main'
}
repositories {
    mavenCentral()
    //needed for locallyinstalled jdbc4 from microsoft
    mavenLocal()
    maven{
        url "https://maven.elasticsearch.org/releases"
    }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    compile 'org.slf4j:slf4j-api:1.7.21'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
//    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.21'
//    compile group: 'org.slf4j', name: 'slf4j-jcl', version: '1.7.21'
//    compile 'org.slf4j:slf4j-log4j12:1.7.21'

    //compile 'log4j:log4j:1.2.17'
    compile 'joda-time:joda-time:2.9.3'
    compile "org.elasticsearch.plugin:shield:2.3.3"
    compile 'org.elasticsearch:elasticsearch:2.3.3'
    compile("org.springframework:spring-web")
    compile("org.hsqldb:hsqldb")
    compile 'org.hsqldb:hsqldb:2.3.3'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
    //switch for ms driver
    //compile files('libs/sqljdbc42.jar')
    compile ('com.microsoft.sqlserver:sqljdbc42:4.2')
    compile 'net.sourceforge.jtds:jtds:1.3.1'
    compile group: 'org.springframework', name: 'spring-web', version: '4.2.6.RELEASE'
    compile("org.springframework.boot:spring-boot-starter-batch")
    compile ('org.springframework.batch:spring-batch-core:3.0.7.RELEASE')
    compile ('org.springframework.batch:spring-batch-integration:3.0.7.RELEASE')
    compile ('org.springframework:spring-core:4.2.6.RELEASE')
    compile ('org.springframework:spring-test:4.2.6.RELEASE')
    compile ('org.springframework:spring-jdbc:4.2.6.RELEASE')
    compile ('org.springframework:spring-context:4.2.6.RELEASE')
    compile ('org.springframework:spring-jms:4.2.6.RELEASE')
    compile ('org.springframework.integration:spring-integration-core:4.2.6.RELEASE')
    compile ('org.springframework.integration:spring-integration-core:4.2.6.RELEASE')
    compile ('org.springframework.integration:spring-integration-jms:4.2.6.RELEASE')
    //compile 'commons-dbcp:commons-dbcp:1.4'
    //compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
    compile group: 'com.zaxxer', name: 'HikariCP', version: '2.4.6'
    compile 'commons-io:commons-io:2.4'
    compile 'org.postgresql:postgresql:9.4-1205-jdbc42'
    compile 'org.springframework.batch:spring-batch-docs:1.1.4.RELEASE'
    compile 'org.springframework.integration:spring-integration-java-dsl:1.1.2.RELEASE'
    compile 'org.apache.activemq:activemq-core:5.7.0'
    compile 'org.apache.activemq:activemq-spring:5.13.0'
    compile 'org.apache.tika:tika-core:1.11'
    compile ('org.apache.tika:tika-parsers:1.11'){
        exclude group: 'commons-logging', module: 'commons-logging' //by both name and group
    }

    //nlp
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
    compile 'org.codehaus.groovy:groovy-all:2.4.4'
    compile 'uk.ac.gate:gate-core:8.1'
    compile 'xml-apis:xml-apis:1.4.01'
    //test
    testCompile("junit:junit")
    testCompile('org.mockito:mockito-all:1.10.19');
    testCompile group: 'de.sven-jacobs', name: 'loremipsum', version: '1.0'
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.3'
}

allprojects {
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xlint:unchecked"
        }
    }
}

task copyToDocker(type:Copy) {
    from 'build/libs/turbo-laser-0.3.0.jar'
    into 'docker-cogstack/docker-compose/turbo-laser/turbolaser/'
}

task buildTLContainer(type:Exec) {
    workingDir 'docker-cogstack/docker-compose/turbo-laser'
    commandLine 'docker','build','-t','richjackson/turbolaser','.'
}

task buildPostgresContainer(type:Exec) {
    workingDir 'docker-cogstack/docker-compose/postgres'
    commandLine 'docker','build','-t','richjackson/postgres','.'
}

task buildBiolarkContainer(type:Exec) {
    workingDir 'docker-cogstack/docker-compose/biolark'
    commandLine 'docker','build','-t','richjackson/biolark','.'
}


task writeExampleConfigs  {
    //ItemProcessors
    String deidentification = new File("src/integration-test/resources/deidentification.properties").text
    String elasticgazetteer = new File("src/integration-test/resources/elasticgazetteer_test.properties").text
    String tika = new File("src/integration-test/resources/tika.properties").text
    String gate = new File("src/integration-test/resources/gate.properties").text
    String reindex = new File("src/integration-test/resources/reindex.properties").text

    //moved to db specific config
    //String dBLineFixer = new File("src/integration-test/resources/dBLineFixer.properties").text
    String biolark = new File("src/integration-test/resources/biolark.properties").text

    //Database connectivity
    String postgres_db = new File("src/integration-test/resources/postgres_db.properties").text
    String sql_server_db = new File("src/integration-test/resources/sql_server_db.properties").text

    //ItemWriters
    String elasticsearch = new File("src/integration-test/resources/elasticsearch.properties").text

    //Job and Step
    String jobAndStep = new File("src/integration-test/resources/jobAndStep.properties").text

    //JMS
    String jms = new File("src/integration-test/resources/jms.properties").text

    //configured start
    String configuredStart = new File("src/integration-test/resources/configured_start.properties").text

    //Scheduling
    String scheduling = new File("src/integration-test/resources/scheduling.properties").text


    new File("exampleConfigs").mkdir()
    def gateExample = new File("exampleConfigs/gateJob.properties")
    gateExample.withWriter("UTF-8") { writer ->
        writer.write(  "# EXAMPLE CONFIG FOR gateJob \n" +
                elasticsearch
                + "\n" + gate
                + "\n" + jms
                + "\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=gate,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"

        )
    }
    def tikaExample = new File("exampleConfigs/tikaJob.properties")
    tikaExample.withWriter("UTF-8"){ writer ->
        writer.write ("# EXAMPLE CONFIG FOR tikaJob \n" +
                elasticsearch
                +"\n" + tika
                +"\n" + jms
                +"\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=tika,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }
    def basicExample = new File("exampleConfigs/basicJob.properties")
    basicExample.withWriter("UTF-8"){ writer ->
        writer.write("# EXAMPLE CONFIG FOR basicJob \n" +
                elasticsearch
                +"\n" + jms
                +"\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=basic,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }
    def biolarkExample = new File("exampleConfigs/biolarkJob.properties")
    biolarkExample.withWriter("UTF-8"){ writer ->
        writer.write("# EXAMPLE CONFIG FOR biolark Job \n" +
                elasticsearch
                +"\n" + biolark
                +"\n" + jms
                +"\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=biolark,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }
    def reindexExample = new File("exampleConfigs/reindexJob.properties")
    reindexExample.withWriter("UTF-8"){ writer ->
        writer.write("# EXAMPLE CONFIG FOR reindex Job \n" +
                elasticsearch
                +"\n" + reindex
                +"\n" + jms
                +"\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=basic,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }
    def basicExample2 = new File("exampleConfigs/basicJob2.properties")
    basicExample2.withWriter("UTF-8"){ writer ->
        writer.write("# EXAMPLE CONFIG FOR basicJob with timestamp based processing, configured start date and scheduling on \n" +
                elasticsearch
                +"\n" + scheduling
                +"\n" + configuredStart
                +"\n" + jms
                +"\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=basic,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }

    def dBLineFixerExample = new File("exampleConfigs/dBLineFixerJob.properties")
    dBLineFixerExample.withWriter("UTF-8"){ writer ->
        writer.write("# EXAMPLE CONFIG FOR dBLineFixerJob \n" +
                elasticsearch
                +"\n" + jms
                +"\n" + elasticsearch
                +"\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=dBLineFixer,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }

    def deidentificationExample = new File("exampleConfigs/deidJob.properties")
    deidentificationExample.withWriter("UTF-8"){ writer ->
        writer.write("# EXAMPLE CONFIG FOR deidentification Job \n" +
                elasticsearch
                +"\n" + deidentification
                +"\n" + elasticgazetteer
                +"\n" + jms
                +"\n" + jobAndStep
                + "\n" + sql_server_db
                + "\n" + scheduling
                + "\nspring.profiles.active=deid,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }

    def fullPipeline = new File("exampleConfigs/fullPipelineJob.properties")
    fullPipeline.withWriter("UTF-8"){ writer ->
        writer.write("# EXAMPLE CONFIG FOR deidentification Job \n" +
                elasticsearch
                +"\n" + deidentification
                +"\n" + biolark
                +"\n" + jms
                +"\n" + jobAndStep
                + "\n" + postgres_db
                + "\n" + scheduling
                + "\nspring.profiles.active=deid,biolark,localPartitioning,jdbc,elasticsearch,primaryKeyAndTimeStampPartition"
        )
    }

}
